fixed up navigation issue